--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -5,7 +5,7 @@ h1{
     text-align: center;
     color: whitesmoke;
     font-family: 'Sansita Swashed', cursive;
-    font-weight: italic;
+    font-style: italic;
     font-size: 50px;
 
 }
