--- a/assets/css/styleContact.css
+++ b/assets/css/styleContact.css
@@ -98,7 +98,7 @@ hr
         }
         h1{
             width: 100%;
-            text-align: left;
+            text-align: center;
             margin-right: 10px;
         }
 
