added contact info for socials

--- a/assets/css/styleContact.css
+++ b/assets/css/styleContact.css
@@ -17,7 +17,7 @@ h1{
 }
 
 
-.container{
+.e-mail{
     margin: 50px auto;  
     background-image: url("../images/contact\ form1.jpg" ); 
     background-size: cover;
