--- a/assets/css/styleContact.css
+++ b/assets/css/styleContact.css
@@ -19,54 +19,38 @@ h1{
 
 .e-mail{
     margin: 50px auto;  
-    background-image: url("../images/contact\ form1.jpg" ); 
-    background-size: cover;
-    border-radius: 10%;
-     
-    width:45%;
+  background-color: #333;
+    color: whitesmoke;
+    width:50%;
    padding: 0 65px;
   
 }
 
-.inputHeading{
+.right{
+   padding-left: 200px;
+   padding-top: 10px;
+   position: relative;
+}
 
+
+    label
+    {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #ff6f61;
     padding-top:20px;
-}
-
-hr  
-    {  
-    width: 100%;  
-    height: 2px;    
-    margin-bottom: 7px;  
-    margin-right: auto;  
-    margin-left:  auto;  
-    margin-top: 9px;  
-    border-width: 4px;  
-    border-color: #333;  
-    }  
-    
+    }
    
-    #footer {
-    
-        font-family: 'Sansita Swashed', cursive;
-        text-align: center;
-        color: whitesmoke;
+    footer {
         position: absolute;
+        bottom: 0;
         width: 100%;
-        height: 2.5rem;
-        float: left;
-        left: 0;
-        padding: 30px;
-        padding-top: 15%;
-    }
-
-    .card{
         background-color: #333;
-        width: 100%;
+       }
+
+    input{
+       margin-left: 26px;
     }
-    
+   
    
 
     @media screen and (max-width: 768px) {
@@ -76,6 +60,7 @@ hr
             
              width: 100%;
              padding: 5px;
+           
            }
      }
 
