--- a/assets/css/stylePortfolio.css
+++ b/assets/css/stylePortfolio.css
@@ -49,7 +49,9 @@ h4{
         background-color: #333;
        }
 
-
+       
+       a { color: whitesmoke; } /* CSS link color (red) */
+       a:hover { color: blueviolet; } /* CSS link hover (green) */
 
 @media screen and (max-width: 768px) {
 
