--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -3,7 +3,7 @@
 h1{
 
     text-align: center;
-    color: whitesmoke;
+    color: #333;
     font-family: 'Sansita Swashed', cursive;
     font-style: italic;
     font-size: 50px;
@@ -11,9 +11,9 @@ h1{
 }
 
     body{
-        background-image: url("../images/background-3.jpg" );  
-        background-size: cover;
-        background-position: center;
+        background:-webkit-repeating-radial-gradient(circle,#8c8eb6,#8c8eb6 8px,#e8e8e5 8px,#e8e8e5 20px); 
+        background: repeating-radial-gradient(circle,#8c8eb6,#8c8eb6 8px,#e8e8e5 8px,#e8e8e5 20px);
+        background-size:37px 34px;
     }
    
 
