--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -3,11 +3,20 @@
 h1{
 
     text-align: center;
-    color: #333;
+    color: whitesmoke;
     font-family: 'Sansita Swashed', cursive;
     font-style: italic;
     font-size: 50px;
 
+}
+
+.aboutMe{
+    
+    text-align: center;
+    color: #333;
+    font-family: 'Sansita Swashed', cursive;
+    font-style: italic;
+    font-size: 50px;
 }
 
     body{
