--- a/assets/css/stylePortfolio.css
+++ b/assets/css/stylePortfolio.css
@@ -7,7 +7,7 @@ body{
 
 
 #portfolio { text-align: center;
-    color: #333
+    color: #333;
     font-family: 'Sansita Swashed', cursive;
     font-style: italic;
     font-size: 50px;
@@ -47,6 +47,7 @@ h4{
         bottom: 0;
         width: 100%;
         background-color: #333;
+        position: absolute;
        }
 
        .portfolio
